--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
 }
 
