--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.PostActivity">
-
-        </activity>
-        <activity android:name=".activities.AdminUploadActivity">
-        </activity>
+        <activity android:name=".activities.SignupActivity"></activity>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.PostActivity" />
+        <activity android:name=".activities.AdminUploadActivity" />
         <activity android:name=".models.Posts" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
