--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,19 @@
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".activities.PostActivity" />
-        <activity android:name=".activities.AdminUploadActivity" />
-        <activity android:name=".models.Posts" />
-        <activity android:name=".activities.MainActivity">
+            android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".activities.PostActivity" />
+        <activity android:name=".activities.AdminUploadActivity" />
+        <activity android:name=".models.Posts" />
+        <activity android:name=".activities.MainActivity">
+
         </activity>
 
         <meta-data
